=== master

* Optimize render_each and each_part default local selection on Ruby 3+/!Windows (jeremyevans)

* Optimize render_each and each_part template selection when freezing app with :assume_fixed_locals render plugin option (jeremyevans)

=== 3.93.0 (2025-06-12)

* Numerous minor performance improvements, mostly from rubocop-performance (jeremyevans)

* Support invalid_value_message for custom invalid value messages per-type in typecast_params plugin (jeremyevans)

=== 3.92.0 (2025-05-13)

* Add each_part plugin, with a simpler method for using render_each with locals (jeremyevans)

* Support :assume_fixed_locals render option in render_each plugin (jeremyevans)

=== 3.91.0 (2025-04-11)

* Support returns: :buffer method and plugin option in capture_erb plugin (jeremyevans)

* Allow render_each to accept a block and yield renderings, instead of returning a concatenation of the renderings (jeremyevans)

=== 3.90.0 (2025-03-11)

* Set temporary name on Ruby 3.3+ for remaining anonymous modules and classes (jeremyevans)

* Make send_file in sinatra_helpers use a response body that implements to_path (jeremyevans) (#379)

* Escape newlines in common logger lines (jeremyevans)

=== 3.89.0 (2025-02-12)

* Support passing keyword arguments to mailer plugin mail/sendmail class methods (jeremyevans)

* Improve performance when using :assume_fixed_locals render plugin option, when using compiled methods and freezing the app (jeremyevans)

* Add part plugin, with a simpler (and better performing when using :assume_fixed_locals) method for rendering with locals (jeremyevans)

* Support :assume_fixed_locals render plugin option for better caching when all templates use fixed locals (jeremyevans)

=== 3.88.0 (2025-01-14)

* Support fixed locals in templates when using Tilt 2.6+ (jeremyevans)

* Make default_headers plugin correctly handle mixed/upper case content-type header on Rack 3 (jeremyevans) (#373)
